--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,12 +30,16 @@ dist.jar=${dist.dir}/Shout.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.jsch-0.1.54.jar=lib\\jsch-0.1.54.jar
+file.reference.mysql-connector-java-8.0.11.jar=lib\\mysql-connector-java-8.0.11.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
-    ${javafx.classpath.extension}
+    ${javafx.classpath.extension}:\
+    ${file.reference.jsch-0.1.54.jar}:\
+    ${file.reference.mysql-connector-java-8.0.11.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -78,7 +82,7 @@ javafx.enable.concurrent.external.runs=false
 javafx.enabled=true
 javafx.fallback.class=com.javafx.main.NoJavaFXFallback
 # Main class for JavaFX
-javafx.main.class=shout.Shout
+javafx.main.class=client.Client
 javafx.preloader.class=
 # This project does not use Preloader
 javafx.preloader.enabled=false
