Added Base Database Classes and the Scenebuilder jar File

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -32,6 +32,7 @@ endorsed.classpath=
 excludes=
 file.reference.jsch-0.1.54.jar=lib\\jsch-0.1.54.jar
 file.reference.mysql-connector-java-8.0.11.jar=lib\\mysql-connector-java-8.0.11.jar
+file.reference.scenebuilder-9.0.1-all.jar=lib\\scenebuilder-9.0.1-all.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
@@ -39,7 +40,8 @@ jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
     ${file.reference.jsch-0.1.54.jar}:\
-    ${file.reference.mysql-connector-java-8.0.11.jar}
+    ${file.reference.mysql-connector-java-8.0.11.jar}:\
+    ${file.reference.scenebuilder-9.0.1-all.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
